# knowlp-rag

./: .gitignore  LICENSE  README.md  SKILL.md  __init__.py  apply_feedback.py  build_graph.py  config.py  config.yaml.example  deep_extract.py  eval_queries.json  honcho_to_graph.py  knowlp.sh  knowlp_search.py  pyproject.toml  record_feedback.py  run_eval.py  server.py  unified_search.py  vector_index.py  watch_vault.py
docs/: architecture.html
tests/: test_chunk_body.py  test_feedback.py  test_fuzzy_match.py  test_graph_merge.py  test_query_detect.py  test_run_eval.py
